Fixes overflow on file uploads and the double error popup

--- a/Project/src/main/resources/static/css/upload.css
+++ b/Project/src/main/resources/static/css/upload.css
@@ -11,3 +11,8 @@ ul {
 .alert {
     display: none;
 }
+
+.custom-file-label {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
